@@ -16,7 +16,6 @@
     # SECTION ssl BEGIN.
     SSLEngine On
     SSLCertificateFile      {CERTIFICATE}
-
     Header always set Strict-Transport-Security "max-age={HSTS_MAX_AGE}{HSTS_INCLUDE_SUBDOMAINS}"
     # SECTION ssl END.
 
@@ -115,8 +114,8 @@
     # SECTION ssl_proxy BEGIN.
     SSLProxyEngine on
     # SECTION ssl_proxy END.
-    RequestHeader set X-Forwarded-Proto "http"
-    RequestHeader set X-Forwarded-Port 80
+    RequestHeader set X-Forwarded-Proto "{X_FORWARDED_PROTOCOL}"
+    RequestHeader set X-Forwarded-Port {X_FORWARDED_PORT}
     ProxyPreserveHost {FORWARD_PRESERVE_HOST}
     ProxyPassMatch ^/((?!(?:errors|\.well-known)/).*) {FORWARD}$1 retry=30 timeout=7200
     ProxyPassReverse / {FORWARD}
