@@ -4,6 +4,9 @@
 Git 1.5.x
 ------------------------------------------------------------------------------------------------------------------------
 
+CONFIG
+    Fixed: Bad value for X-Forward-* headers (Proxy feature / Apache2 ssl vhosts)
+
 YOUTRACK
     IP-1785 Exception in circular email feature (admin interface)
     IP-1786 Customer assignment (to reseller) not showing all clients
